--- a/homepage/good.css
+++ b/homepage/good.css
@@ -5,6 +5,8 @@
 
 body {
   background-color: #b2cede;
+  background-image: url("bg.svg");
+  background-size: cover;
 }
 
 p {
@@ -21,59 +23,86 @@ h1 {
 }
 
 .container {
-  width: 800px;
+  max-width: 800px;
+  width: 90%;
   height: fit-content;
   margin: auto auto;
   border: 1px solid #5a716a;
+  background-color: white;
+  border-radius: 10px;
   padding: 10px;
 }
 
 .profile {
+  padding: 5em 5em 2em 5em;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  background-image: linear-gradient(
-    to right top,
-    #051937,
-    #004d7a,
-    #008793,
-    #00bf72,
-    #a8eb12
-  );
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #b5bad0;
+  text-align: center;
+  border-radius: 10px;
 }
 
 .profile > img {
-  place-self: flex-end;
+  margin: 1em;
+  border-radius: 50%;
 }
+
 .profile > h1 {
-  align-self: center;
+  margin-top: 1em;
+  color: #383838;
 }
 
-.content {
+.tagline {
+  margin-top: 1em;
+  font-size: 1.5em;
+  color: #74707a;
+}
+
+.bio {
+  padding: 1em;
+  background-color: #45425a;
+  color: #d2d7df;
+  font-size: 1.2em;
+  border-radius: 10px;
+}
+
+.bio-point {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+}
+.bio-name {
+  width: 20%;
+}
+.bio-point > div {
+  margin: 1em;
+  padding: 1em;
 }
 
-.content > .bio {
-  width: 70%;
+.left-border {
+  border-left: 3px solid #ccc9dc;
+  width: 80%;
 }
 
-.content > .important1 {
-  width: 30%;
-  border: 1px solid #5a716a;
-  align-self: center;
+.importantPoints {
+  background-color: #a3b9c9;
+  font-size: 1.2em;
+  padding: 1em;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
 }
 
-.content > .important1 > strong {
+.importantPoints > strong {
+  justify-self: center;
   text-align: center;
+  margin: 1em;
+  width: 20%;
 }
 
-.line {
-  width: 100%;
-  height: 2em;
-  background-color: #bf6333;
+.importantPoints > ul {
+  width: 80%;
 }
 
 .center-box {
